samples/_failures_safe/1761529280_59d2f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ce37af5.c: In function ‘main’:
./samples/SAFE/__tmp_5ce37af5.c:129:5: error: expected declaration or statement at end of input
  129 |     buffer_free(&decompressed);
      |     ^~~~~~~~~~~
